--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,10 +21,10 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 0px) {
   body {
     display: flex;
-    place-items: center;
+    margin-top: 1%;
   }
 
   #app {
